Fix overflow

--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ input::placeholder {
 		grid-template-columns: 33vw 66vw;
 		grid-template-rows: 2fr 1fr 1fr;
 		height: 100vh;
-		overflow: hidden;
 	}
 
 	.image {
